src/test/ui/issues/issue-60622.stderr
error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/issue-60622.rs:10:11
   |
LL |     b.a::<'_, T>();
   |           ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/issue-60622.rs:6:10
   |
LL |     fn a(&self) {}
   |          ^
   = help: remove the explicit lifetime argument

error[E0107]: this associated function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/issue-60622.rs:10:7
   |
LL |     b.a::<'_, T>();
   |       ^       - help: remove this generic argument
   |       |
   |       expected 0 generic arguments
   |
note: associated function defined here, with 0 generic parameters
  --> $DIR/issue-60622.rs:6:8
   |
LL |     fn a(&self) {}
   |        ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
